--- a/nebukina_va/task1/task1.vcxproj.filters
+++ b/nebukina_va/task1/task1.vcxproj.filters
@@ -14,5 +14,8 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rebuild.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
